Very Functionnal before show_no settings

--- a/src/style/_config.scss
+++ b/src/style/_config.scss
@@ -4,3 +4,8 @@ $headings-font-family: "Roboto Slab", serif;
 $headings-font-weight: 800;
 
 $font-family-base: "Libre Baskerville", serif;
+
+$like: rgba(74, 11, 249, 0.3); 
+$lotlike: rgb(0, 238, 255); 
+$dislike: orange;
+$lotdislike: red;
